--- a/damian_exam_01_02/index.html
+++ b/damian_exam_01_02/index.html
@@ -20,6 +20,7 @@
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <link rel="stylesheet" href="/bootstrap5/css/mdb.min.css">
     <link rel="stylesheet" href="style.css"> -->
+    <link rel="icon" href="img/vehicule4.png" type="image/x-icon" />
     <title>exam</title>
 </head>
 
